Added route to get all users
