# internal/server/user_handler.go
@@ -30,3 +30,24 @@ func (s *Server) GetSelfHandler(c echo.Context) error {
 
 	return c.JSON(http.StatusOK, session)
 }
+
+// Users godoc
+//
+//	@Summary		Get All Users
+//	@Description	Returns a list of all users
+//	@Tags			user
+//	@Success		200 {array} models.SelfUser
+//	@Router			/auth/users [get]
+func (s *Server) GetUsersHandler(c echo.Context) error {
+	user := c.Get("user").(*jwt.Token)
+	claims := user.Claims.(*models.JwtCustomClaims)
+
+	if claims.Role != "admin" {
+		return c.JSON(http.StatusForbidden, map[string]string{
+			"message": "You are not authorised to view this resource",
+		})
+	}
+
+	users := s.db.GetUsers()
+	return c.JSON(http.StatusOK, users)
+}
